--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
     <!-- Custom styles for this template -->
     <link href="cover.css" rel="stylesheet">
   </head>
-  <body class="d-flex h-100 text-center text-white bg-dark">
-    
-<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-  <header class="mb-auto">
+    <body class="bg-dark">
+        <header class="p-5 text-white">
     <div>
       <h3 class="float-md-start mb-0">Portfolio</h3>
       <nav class="nav nav-masthead justify-content-center float-md-end">
@@ -48,18 +46,12 @@
       </nav>
     </div>
   </header>
-
-  <main class="px-3">
-    <h1>Cover your page.</h1>
-    <p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
-    <p class="lead">
-      <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-    </p>
+ <div class="banner-wrap vh-100 vw-100 text-white">
+  <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
+    <h1 class="display-1">I am Ayabonga Lizo</h1>
+    <p class="lead">Full Stack Developer, Coder. Entrepreneur.</p>
   </main>
 
-  <footer class="mt-auto text-white-50">
-    <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
-  </footer>
 </div>
 
 
