--- a/index.html
+++ b/index.html
@@ -129,5 +129,36 @@
     </div> 
   </div>
 </section>
+
+<section>
+  <div class="container p-5">
+    <div class="card  p-3">
+    <div class="card-body px-5 text-center">
+      <h1><mark>Lets's Connect!</mark></h1>
+      <p class="lead text-center">Open to connecting with fellow developers, employers, and individuals or businesses seeking web development services.</p>
+      <a class="fs-2" href="https://www.linkedin.com/in/ayabonga-lizo-65a083364/" target="_blank"><i class="bi bi-linkedin m-2"></i></a>
+      <a class="fs-2" href="https://github.com/Ayabonga-Lizo" target="_blank"><i class="bi bi-github m-2"></i></a>
+      <a class="fs-2" href="https://www.instagram.com/ayabongalizo/" target="_blank"><i class="bi bi-instagram m-2"></i></a>
+
+
+      <form>
+  <div class="mb-3">
+    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"  placeholder="Enter Email Address">
+  </div>
+  <div class="mb-3">
+    <input type="text" class="form-control" id="name" placeholder="Enter Name">
+  </div>
+  <div class="mb-3">
+    <input type="text" class="form-control" id="subject" placeholder="Enter Subject">
+  </div>
+  <div class="mb-3">
+  <textarea class="form-control" aria-label="With textarea" placeholder="Enter Message"></textarea>
+  </div>
+  <button type="submit" class="btn btn-primary">Submit</button>
+</form>
+    </div>
+  </div>
+  </div>
+</section>
   </body>
 </html>
