--- a/index.html
+++ b/index.html
@@ -22,26 +22,27 @@
     <link rel="stylesheet" href="style.css">
   </head>
     <body class="bg-light">
-          <div class="banner-wrap vh-100 vw-100 text-white">
-          <div class="overlay">
-      <header class="px-5 p-3 text-white">
+      <header class="px-5 p-3 text-white fixed-top">
         <div>
         <h3 class="float-md-start text-center">Portfolio</h3>
         <nav class="nav nav-masthead justify-content-center float-md-end">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Features</a>
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" href="#about-us">About us</a>
+          <a class="nav-link" href="#projects">Projects</a>
+          <a class="nav-link" href="#contact">Contact</a>
         </nav>
         </div>
       </header>
-      <main class="d-flex flex-column align-items-center justify-content-center h-75 text-center">
+      <div class="banner-wrap vh-100 vw-100 d-flex align-items-center justify-content-center text-white">
+          <div class="overlay"></div>
+      <main class="text-center">
         <h1 class="display-1">I am Ayabonga Lizo</h1>
-        <p class="lead">Full Stack Developer, Coder. Entrepreneur.</p>
+        <span id="typed" class="lead"></span>
       </main>
       </div>
     </div>
 
-<section>
+<section id="about-us">
   <div class="container p-5">
     <div class="card">
     <div class="card-body">
@@ -85,7 +86,7 @@
   </div>
 </section>
     
-<section>
+<section id="projects">
   <div class="container p-3">
     <h1 class="text-center"><mark>Projects</mark></h1>
     <div class="row">
@@ -130,7 +131,7 @@
   </div>
 </section>
 
-<section>
+<section id="contact">
   <div class="container p-5">
     <div class="card  p-3">
     <div class="card-body px-5 text-center">
@@ -160,5 +161,29 @@
   </div>
   </div>
 </section>
+
+<footer class="bg-dark text-center text-white">
+  <div class="container p-3">
+    <p>© 2026 Ayabonga Lizo · All Rights Reserved</p>
+  </div>
+</footer>
+
+<script>
+  window.addEventListener('scroll', () => {
+    const header = document.querySelector('header')
+   header.classList.toggle("scrolling", window.scrollY > 0)
+  })
+</script>
+
+<script src="https://unpkg.com/typed.js@3.0.0/dist/typed.umd.js"></script>
+<script>
+  var typed = new Typed('#typed', {
+    strings: ['Full Stack Developer', 'Coder', 'Entrepreneur.'],
+    loop: true,
+     typeSpeed: 75,
+     shuffle: true,
+  });
+</script>
+
   </body>
 </html>
